# lite-deer-flow-start

./: .env.example  .gitignore  config.example.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
backend/: .gitignore  AGENTS.md  main.py  pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: lead.py  lead_agent.py  subagents.py
backend/app/gateway/: app.py  schemas.py  store.py
backend/app/prompts/: lead_agent_prompt.py
backend/app/skills/report/: SKILL.md
backend/app/skills/research/: SKILL.md
backend/app/tools/: web_search.py
docs/: PRD.md
docs/langchain/: llms.txt
openspec/changes/archive/2026-05-20-complete-agent-core/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-20-complete-agent-core/specs/agent-core/: spec.md
openspec/changes/archive/2026-05-20-complete-agent-core/specs/cli-workflow/: spec.md
openspec/changes/archive/2026-05-20-complete-agent-core/specs/config-system/: spec.md
openspec/changes/archive/2026-05-20-complete-agent-core/specs/mock-search/: spec.md
openspec/specs/agent-core/: spec.md
openspec/specs/cli-workflow/: spec.md
openspec/specs/config-system/: spec.md
openspec/specs/mock-search/: spec.md
